# Game

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  makefile.var
src/: Setup.hpp  main.cpp
src/Core/: EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/Math/: Math.hpp
src/Platform/: Platform.hpp
src/Platform/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/Platform/Windows/: Windows.hpp
src/Utils/: FlagParser.cpp  FlagParser.hpp  Logger.cpp  Logger.hpp  String.hpp
test/: FlagParser.test  Math.cpp  String.test  TestSetup.hpp
